Keep AiSList warning helper Android-compatible